--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
 
     <!-- CSS -->
     <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css"> <!-- custom styles -->
+    <!-- <link rel="stylesheet" href="css/style.css"> -->
 
     <!-- JS -->
     <script src="libs/angular/angular.min.js"></script>
@@ -21,7 +21,7 @@
     <script src="js/appRoutes.js"></script>
     <script src="js/app.js"></script>
 </head>
-<body ng-app="sampleApp" ng-controller="BeerController">
+<body ng-app="beerWorld" ng-controller="MainController">
 <div class="container">
 
     <!-- HEADER -->
@@ -29,16 +29,12 @@
         <div class="navbar-header">
             <a class="navbar-brand" href="/">Home</a>
         </div>
-
-        <!-- LINK TO OUR PAGES. ANGULAR HANDLES THE ROUTING HERE -->
-        <ul class="nav navbar-nav">
-            <li><a href="/beer">Beers</a></li>
-        </ul>
     </nav>
+
+    <h1>Beerworld!</h1>
 
     <!-- ANGULAR DYNAMIC CONTENT -->
     <div ng-view></div>
-
 </div>
 </body>
 </html>
