Het fixen van de express code voor data uit de databank te halen

--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
 
     <link href="style/style.css" rel="stylesheet"/>
 </head>
-<body ng-app="beerWorld" ng-controller="MainController">
+<body ng-app="beerWorld" >
 <div class="container">
     <!-- HEADER -->
     <nav class="navbar navbar-inverse">
