--- a/public/index.html
+++ b/public/index.html
@@ -20,9 +20,11 @@
     <script src="js/controllers/BeerCtrl.js"></script>
     <script src="js/controllers/AuthCtrl.js"></script>
     <script src="js/controllers/NavCtrl.js"></script>
+    <script src="js/controllers/ProfileCtrl.js"></script>
     <script src="js/directive/HeaderDirectiveController.js"></script>
     <script src="js/services/AuthService.js"></script>
     <script src="js/services/BeerService.js"></script>
+    <script src="js/services/ProfileService.js"></script>
     <script src="js/appRoutes.js"></script>
     <script src="js/app.js"></script>
 
@@ -35,10 +37,10 @@
     <nav class="navbar navbar-inverse" ng-controller="NavController">
       <ul class="nav navbar-nav">
         <li><a class="navbar-brand" href="/">Home</a></li>
-        <li ng-show="isLoggedIn()"><a>{{ currentUser() }}</a></li>
+        <li ng-show="isLoggedIn()"><a href="/#/profile">Mijn bieren</a></li>
         <li ng-show="isLoggedIn()"><a href="" ng-click="logOut()">Log Out</a></li>
         <li ng-hide="isLoggedIn()"><a href="/#/login">Log In</a></li>
-        <li ng-hide="isLoggedIn()"><a href="/#/register">Register</a></li>
+        <li ng-hide="isLoggedIn()"><a href="/#/register">Registreer</a></li>
     </ul>
     </nav>
 
